Enhance Data_type and function notebooks with new examples and concepts, including list comprehensions, stack and queue implementations, and partial functions.

--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -817,11 +817,12 @@
       "[1, 2, 3, 4, 5]\n",
       "[1, 2, 3, 4, 5, 6]\n",
       "[1, 2, 3, 4, 5, 6, 7]\n",
-      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "[2, 3, 4, 5, 6, 7, 8]\n",
       "[2, 3, 4, 5, 6]\n",
-      "[2, 3, 4]\n",
-      "[3, 4]\n",
-      "2\n"
+      "[3, 4, 5, 6]\n",
+      "4\n"
      ]
     }
    ],
@@ -829,6 +830,7 @@
     "list=[1,2,-3,4,5];list[2]=3;print(list) # list modification\n",
     "list.append(6);print(list) # add element to list\n",
     "list.insert(6,7);print(list)  # insert element to list\n",
+    "list.extend([8,9]);print(list)  # extend list with another list\n",
     "list.pop();print(list)  # remove last element from list\n",
     "list.remove(1);print(list)  # remove specific value element from list\n",
     "list[-2:]=[];print(list) # list shrink\n",
@@ -866,42 +868,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**reverse & index**"
+    "**positional operator**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "[4, 3, 2, 1]\n",
+      "[1, 2, 3, 4]\n",
+      "1\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "list=[1,2,3,4];list1=list.reverse();print(list1)  # reverse list in place"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4, 3, 2, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "list=[1,2,3,4];list.reverse() # reverse witthout return\n",
-    "print (list)"
+    "list=[1,2,3,4];list.reverse();print(list)  # reverse list in place\n",
+    "list.sort();print(list)  # sort list in place\n",
+    "print(list.index(2))  # find index of element\n",
+    "print(list.count(2))  # count number of element"
    ]
   },
   {
@@ -913,37 +903,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4]\n"
+      "[0, 1, 4, 9, 16]\n",
+      "[0, 1, 4, 9, 16]\n"
      ]
     }
    ],
    "source": [
-    "list=[x for x in range(5)];print(list)  # list comprehension"
+    "list0=[x**2 for x in range(5)];print(list0)  # list comprehension for creating list\n",
+    "list1=list(map(lambda x:x**2,range(5)));print(list1)  # equivalent to list comprehension"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['B', 'C', 'D']\n"
+      "['a', 'b', 'c', 'd', 'e']\n",
+      "['A', 'B', 'C', 'D', 'E']\n",
+      "['a', 'b', 'c', 'd', '']\n"
      ]
     }
    ],
    "source": [
-    "list=['ab','b','c','d'];\n",
-    "list1=[a.upper() for a in list if len(a)==1];print(list1)  # list comprehension with condition"
+    "list=[chr(i) for i in range(ord('a'),ord('f'))];print(list)  # list comprehension for creating list\n",
+    "list1=[x.upper() for x in list if len(x)==1];print(list1)  # list comprehension with condition\n",
+    "list2=[x.strip('e') for x in list];print(list2)  # list comprehension with cleaning function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 4), (2, 5), (3, 6)]\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "vec1=[1,2,3];vec2=[4,5,6];print(list(zip(vec1,vec2)))\n",
+    "innerproduct=sum(x*y for x,y in zip(vec1,vec2));print(innerproduct)  # inner product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**matrix**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2], [3, 4, 5], [6, 7, 8], [9, 10, 11]]\n",
+      "[[0, 3, 6, 9], [1, 4, 7, 10], [2, 5, 8, 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "r=4;c=3\n",
+    "matrix=[[j+c*i for j in range(c)] for i in range(r)];print(matrix)  # list comprehension for creating matrix\n",
+    "matrix_transpose=[[matrix[j][i] for j in range(r)] for i in range(c)];print(matrix_transpose)  # transpose matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**del**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[2, 3]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3];print(a)\n",
+    "del a[0];print(a)  # delete element from list\n",
+    "del a[0:2];print(a)  # delete elements from list\n",
+    "del a  # delete list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Stack (First-In-First-Out)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.Stack=[]\n",
+    "    \n",
+    "    def push(self, item):\n",
+    "        self.Stack.append(item)\n",
+    "    \n",
+    "    def pop(self, index=-1):\n",
+    "        if not self.is_empty():\n",
+    "            return self.stack.pop(index)\n",
+    "        else:\n",
+    "            raise Exception(\"Stack is empty\")\n",
+    "        \n",
+    "    def peek(self, index=-1):\n",
+    "        if not self.is_empty():\n",
+    "            return self.stack[index]\n",
+    "        else:\n",
+    "            raise Exception(\"Stack is empty\")\n",
+    "        \n",
+    "    def is_empty(self):\n",
+    "        return len(self.stack)==0\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return len(self.stack)\n",
+    "    \n",
+    "stack=Stack()\n",
+    "stack.push(1);print(stack.stack)  # push\n",
+    "stack.push(2);print(stack.stack)  # push\n",
+    "stack.push(3);print(stack.stack)  # push\n",
+    "top=stack.pop();print(top, stack.stack)  # pop\n",
+    "top2=stack.peek();print(top2, stack.stack)  # peek\n",
+    "is_empty=stack.is_empty();print(is_empty)  # check if empty\n",
+    "size=stack.size();print(size)  # check size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**queue (Last-In-First-Out)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 2]\n",
+      "[1, 2, 3]\n",
+      "1 [2, 3]\n",
+      "2 [2, 3]\n",
+      "False\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Queue:\n",
+    "    def __init__(self):\n",
+    "        self.queue=[]\n",
+    "    \n",
+    "    def enqueue(self, item):\n",
+    "        self.queue.append(item)\n",
+    "    \n",
+    "    def dequeue(self, index=0):\n",
+    "        if not self.is_empty():\n",
+    "            return self.queue.pop(index)\n",
+    "        else:\n",
+    "            raise Exception(\"Queue is empty\")\n",
+    "        \n",
+    "    def peek(self, index=0):\n",
+    "        if not self.is_empty():\n",
+    "            return self.queue[index]\n",
+    "        else:\n",
+    "            raise Exception(\"Queue is empty\")\n",
+    "        \n",
+    "    def is_empty(self):\n",
+    "        return len(self.queue)==0\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return len(self.queue)\n",
+    "    \n",
+    "queue=Queue()\n",
+    "queue.push(1);print(queue.queue)  # push\n",
+    "queue.push(2);print(queue.queue)  # push\n",
+    "queue.push(3);print(queue.queue)  # push\n",
+    "top=queue.pop();print(top, queue.queue)  # pop\n",
+    "top2=queue.peek();print(top2, queue.queue)  # peek\n",
+    "is_empty=queue.is_empty();print(is_empty)  # check if empty\n",
+    "size=queue.size();print(size)  # check size"
    ]
   },
   {
