--- a/Syntax/function.ipynb
+++ b/Syntax/function.ipynb
@@ -327,6 +327,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**partial**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 27\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "def pow(x,y):\n",
+    "    return x**y\n",
+    "squared=partial(pow,y=2) #partial function\n",
+    "cubed=partial(pow,y=3) #partial function\n",
+    "print(squared(3),cubed(3)) #calling the partial function\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**encapsulation**"
    ]
   },
