Add system argument display, enhance progress script, and update notebooks with module and operation details

--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -374,131 +374,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**format by %**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.141593 in integer is 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math\n",
-    "print(\"%f in %s is %d\" % (math.pi,\"integer\",math.pi))  # %s for string, %d for integer, %f for float"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**format by str.format()**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "two decimal 3.14\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math\n",
-    "str=\"{} {:.2f}\".format(\"two decimal\", math.pi) # default order; 2 decimal places\n",
-    "print(str)  # string format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xx5 10,000\n"
-     ]
-    }
-   ],
-   "source": [
-    "str=\"{0:x>3d} {1:,}\".format(5, 10000) # ordered; fill with x, align right, width 3; comma separator\n",
-    "print(str)  # string format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25.67%  56 x\n"
-     ]
-    }
-   ],
-   "source": [
-    "str=\"{pos1:.2%} {pos2:^4d}x\".format(pos1=0.2567, pos2=56) # named\n",
-    "print(str)  # string format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
-   "source": [
-    "dict={\"pos1\":\"hello\", \"pos2\":\"world\"}\n",
-    "str=\"{pos1} {pos2}\".format(**dict) # dictionary with **\n",
-    "print(str)  # string format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
-   "source": [
-    "list=[\"hello\", \"world\"]\n",
-    "str=\"{0[0]} {0[1]}\".format(list) # list with 0[]\n",
-    "print(str)  # string format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**string as list**"
    ]
   },
@@ -713,6 +588,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**rearrange**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 a\n",
+      "1 b\n",
+      "2 c\n"
+     ]
+    }
+   ],
+   "source": [
+    "line1=range(3);line2=('a','b','c')\n",
+    "for i,j in zip(line1,line2):\n",
+    "    print(i,j) # zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "range(5, 10, 2)\n",
+      "7\n",
+      "range(5, 10, 2)\n",
+      "5\n",
+      "range(5, 10, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in reversed(range(5,10,2)):\n",
+    "    print(i) # reversed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in sorted(('c','b','a')):\n",
+    "    print(i) # sorted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**tuple comprehension**"
    ]
   },
@@ -892,6 +838,33 @@
     "list.sort();print(list)  # sort list in place\n",
     "print(list.index(2))  # find index of element\n",
     "print(list.count(2))  # count number of element"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ergodic**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 a\n",
+      "1 b\n",
+      "2 c\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,v in enumerate(['a','b','c']):\n",
+    "    print(i,v) # enumerate"
    ]
   },
   {
