--- a/Syntax/Object_oriented.ipynb
+++ b/Syntax/Object_oriented.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "1. (private) variable\n",
     "\n",
-    "var=value\n",
+    "`var=value`\n",
     "\n",
-    "__privatevar=privatevalue (only callable inside class)\n",
+    "`__privatevar=privatevalue` (only callable inside class)\n",
     "\n",
     "---\n",
     "\n",
@@ -18,31 +18,37 @@
     "\n",
     "**instance:**\n",
     "\n",
-    "def instance_method(self, args): \n",
+    "`def instance_method(self, args): `\n",
     "\n",
     "**class:**\n",
     "\n",
-    "@classmethod\n",
+    "`@classmethod`\n",
     "\n",
-    "def class_method(cls, args): \n",
+    "`def class_method(cls, args): `\n",
     "\n",
     "**static:**\n",
     "\n",
-    "@staticmethod\n",
+    "`@staticmethod`\n",
     "\n",
-    "def static_method(self, args): \n",
+    "`def static_method(self, args): `\n",
+    "\n",
+    "**propety & setter:**\n",
+    "\n",
+    "`@propety`\n",
+    "\n",
+    "`@*method*.setter`\n",
     "\n",
     "---\n",
     "\n",
     "3. Exclusive method\n",
     "\n",
-    "**constructor**\n",
+    "**constructor:**\n",
     "\n",
-    "def \\_\\_init__(*self, argus*):\n",
+    "`def __init__(*self, argus*):`\n",
     "\n",
-    "**destructor**\n",
+    "**destructor:**\n",
     "\n",
-    "def \\_\\_del__(*self, argus*):\n",
+    "`def __del__(*self, argus*):`\n",
     "\n",
     "...\n",
     "\n",
@@ -50,13 +56,21 @@
     "\n",
     "4. Object\n",
     "\n",
-    "object=classname(*argus*)\n",
+    "`object=classname(*argus*)`\n",
     "\n",
     "---\n",
     "\n",
     "5. derived class & base class\n",
     "\n",
-    "class derivedclassname(modname.naseclassname):\n",
+    "`class derivedclassname(modname.naseclassname):`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "6. class decorator\n",
+    "\n",
+    "**decorators for method**\n",
+    "\n",
+    "**decorators for class**\n",
     "\n",
     "---"
    ]
@@ -331,8 +345,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ### Built-in decorators\n",
     "\n",
     "**class method (@classmethod)**"
@@ -397,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -469,8 +488,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ### Class decorators\n",
     "\n",
     "**decorators for method**"
