--- a/Syntax/Operation.ipynb
+++ b/Syntax/Operation.ipynb
@@ -4,12 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Type\n",
-    "1. function\n",
+    "- ### Operation type\n",
+    "1. Symbol\n",
     "\n",
-    "function(*args*)\n",
+    "symbol a / a symbol b\n",
     "\n",
-    "2. method\n",
+    "2. Keyword\n",
+    "\n",
+    "keyword object\n",
+    "\n",
+    "3. Function\n",
+    "\n",
+    "newargs=function(*args*)\n",
+    "\n",
+    "4. Method\n",
     "\n",
     "object.method(*args*)\n",
     "\n",
@@ -20,32 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Comparison operator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False True True True False False\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(1==2, 1!=2, 1<2, 1<=2, 1>2, 1>=2) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "- ### Assignment operator"
+    "- ### Symbol\n",
+    "\n",
+    "**assignment**"
    ]
   },
   {
@@ -68,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +82,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**walrus operator ':='**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -119,8 +111,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "- ### Bitwise operator"
+    "**comparison**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True True True False False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1==2, 1!=2, 1<2, 1<=2, 1>2, 1>=2) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**bitwise operator: ~  | & ^**"
    ]
   },
   {
@@ -149,26 +164,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Logical opeartion"
+    "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "at least one >2\n"
-     ]
-    }
-   ],
    "source": [
-    "a=3;b=3 #and\n",
-    "if a>2 or b>2:\n",
-    "     print('at least one >2')"
+    "- ### Keyword\n",
+    "\n",
+    "**logical opeartion**"
    ]
   },
   {
@@ -194,8 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "- ### Affiliation opeartion"
+    "**affiliation opeartion**"
    ]
   },
   {
@@ -221,8 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "- ### Recognition opeartion"
+    "**recognition opeartion**"
    ]
   },
   {
@@ -249,8 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "- ### Deletion opeartion"
+    "**deletion opeartion**"
    ]
   },
   {
