--- a/Syntax/Module.ipynb
+++ b/Syntax/Module.ipynb
@@ -4,7 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- ### Module\n",
+    "\n",
+    "1. Standard module\n",
+    "\n",
+    "**math, random, os, sys, datetime, re, itertools, functools...**\n",
+    "\n",
+    "2. site-packages (installed by pip)\n",
+    "\n",
+    "**package names are recongnized by:** \n",
+    "\n",
+    "`__init__.py`\n",
+    "\n",
+    "**in the above file, functions are claimed by:**\n",
+    "\n",
+    "`__all__=[funct1,...,functn]`\n",
+    "\n",
+    "**divert in effects when running as main or imported:**\n",
+    "\n",
+    "`if __name__=\"__main__\":` \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ### import module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**import *module* (as *modnickname*)**"
    ]
   },
   {
@@ -23,6 +57,13 @@
    "source": [
     "import math  # import module\n",
     "print(math.pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**from *module* import *\\* / funct* (as *functnickname*)**"
    ]
   },
   {
@@ -45,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,8 +98,15 @@
     }
    ],
    "source": [
-    "from math import pi as PI  # import *name* as *nickname*\n",
+    "from math import pi as PI  # from module import *name* as *nickname*\n",
     "print(PI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**funct & attribution directory**"
    ]
   },
   {
@@ -157,8 +205,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**operation**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +224,10 @@
       "3.14\n",
       "4\n",
       "3\n",
-      "(0.14158999999999988, 3.0)\n"
+      "(0.14158999999999988, 3.0)\n",
+      "1 3\n",
+      "6\n",
+      "6\n"
      ]
     }
    ],
@@ -179,30 +237,10 @@
     "print(round(3.14159,2))  # round to 2 decimal places\n",
     "print(ceil(3.14159))  # round up\n",
     "print(floor(3.14159))  # round down\n",
-    "print(modf(3.14159))  # split into integer and decimal parts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 3\n",
-      "6\n",
-      "6\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(modf(3.14159))  # split into integer and decimal parts\n",
     "print(min(1,2,3),max(1,2,3))  # minimum\n",
     "print(sum([1,2,3]))  # sum\n",
-    "print(prod([1,2,3]))  # product\n",
-    "print(range(1,10)[-1])  # range"
+    "print(prod([1,2,3]))  # product"
    ]
   },
   {
@@ -258,9 +296,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Random module\n",
     "\n",
-    "- ### Random module"
+    "**random integer/float**"
    ]
   },
   {
