Refactor syntax notebooks for consistency and clarity, updating terminology and enhancing markdown formatting

--- a/Syntax/Operation.ipynb
+++ b/Syntax/Operation.ipynb
@@ -5,21 +5,23 @@
    "metadata": {},
    "source": [
     "- ### Operation type\n",
-    "1. Symbol\n",
+    "1. Operator\n",
     "\n",
-    "symbol a / a symbol b\n",
+    "`*operator* a` \n",
+    "\n",
+    "`a *operator* b`\n",
     "\n",
     "2. Keyword\n",
     "\n",
-    "keyword object\n",
+    "`*kw* object`\n",
     "\n",
     "3. Function\n",
     "\n",
-    "newargs=function(*args*)\n",
+    "`newargs=function(*args*)`\n",
     "\n",
     "4. Method\n",
     "\n",
-    "object.method(*args*)\n",
+    "`object.method(*args*)`\n",
     "\n",
     "---"
    ]
@@ -28,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Symbol\n",
+    "- ### Operator\n",
     "\n",
     "**assignment**"
    ]
