--- a/Syntax/function.ipynb
+++ b/Syntax/function.ipynb
@@ -6,9 +6,13 @@
    "source": [
     "- ### function\n",
     "\n",
-    "1. built-in function\n",
+    "1. Built-in function\n",
     "\n",
-    "2.self-defined function\n",
+    "2. Self-defined function\n",
+    "\n",
+    "3. Anonymous function\n",
+    "\n",
+    "4. Decorator\n",
     "\n",
     "---"
    ]
@@ -17,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Positional/keyword args\n",
+    "- ### Function with Positional/keyword args\n",
     "\n",
     "**default/specific order parameter**"
    ]
@@ -199,8 +203,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ### Anonymous function\n",
     "\n",
     "**parameters**"
