--- a/Syntax/input-output.ipynb
+++ b/Syntax/input-output.ipynb
@@ -16,6 +16,14 @@
     "\n",
     "`open(*filename*, [*mode*])`\n",
     "\n",
+    "**with mode:**\n",
+    "\n",
+    "read / read&write / write / write&read / append / append&read\n",
+    "\n",
+    "r / r+ / w / w+ / a / a+\n",
+    "\n",
+    "`write()` / `sys.stdout`\n",
+    "\n",
     "---\n",
     "\n",
     "2. Output\n",
@@ -31,8 +39,6 @@
     "**formatting:**\n",
     "\n",
     "`str.format()` for formatted string\n",
-    "\n",
-    "`write()` / `sys.stdout` for file\n",
     "\n",
     "---"
    ]
@@ -307,6 +313,13 @@
    "source": [
     "**read and write files**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
