--- a/Syntax/statement.ipynb
+++ b/Syntax/statement.ipynb
@@ -189,7 +189,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### iterator"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### iterator\n",
+    "**iter() & next()**"
    ]
   },
   {
@@ -256,45 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**generator**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<generator object countdown at 0x00000161C3285B40>\n",
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "def countdown(n):\n",
-    "    while n > 0:\n",
-    "        yield n\n",
-    "        n -= 1\n",
-    " \n",
-    "# create a generator\n",
-    "generator = countdown(5)\n",
-    "print(generator)  # <generator object countdown at 0x...>\n",
-    " \n",
-    "# access the value from iterator\n",
-    "print(next(generator))  #5\n",
-    "print(next(generator))  #4\n",
-    "print(next(generator))  #3\n",
-    " \n",
-    "# iterate through the generator\n",
-    "for value in generator:\n",
-    "    print(value)  # print the remaining values"
+    "**generator: yield()**"
    ]
   },
   {
