Add chat client and server scripts, enhance input handling, and update notebooks with new concepts and examples

--- a/Syntax/Module.ipynb
+++ b/Syntax/Module.ipynb
@@ -8,9 +8,31 @@
     "\n",
     "1. Standard module\n",
     "\n",
-    "**math, random, os, sys, datetime, re, itertools, functools...**\n",
+    "**maths:** \n",
     "\n",
-    "2. site-packages (installed by pip)\n",
+    "math, random, statistics\n",
+    "\n",
+    "**file & directory:**\n",
+    "\n",
+    "os, shutil, glob\n",
+    "\n",
+    "**data Handling:**\n",
+    "\n",
+    "json, csv, pickle, sqlite3\n",
+    "\n",
+    "**date & time:**\n",
+    "\n",
+    "time, datetime, calendar\n",
+    "\n",
+    "**internet & networking:**\n",
+    "\n",
+    "urllib, http, socket\n",
+    "\n",
+    "**utilities & tools:**\n",
+    "\n",
+    "itertools, functools, sys, re\n",
+    "\n",
+    "2. Site-packages (installed by pip)\n",
     "\n",
     "**package names are recongnized by:** \n",
     "\n",
@@ -111,89 +133,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['__doc__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__spec__',\n",
-       " 'acos',\n",
-       " 'acosh',\n",
-       " 'asin',\n",
-       " 'asinh',\n",
-       " 'atan',\n",
-       " 'atan2',\n",
-       " 'atanh',\n",
-       " 'cbrt',\n",
-       " 'ceil',\n",
-       " 'comb',\n",
-       " 'copysign',\n",
-       " 'cos',\n",
-       " 'cosh',\n",
-       " 'degrees',\n",
-       " 'dist',\n",
-       " 'e',\n",
-       " 'erf',\n",
-       " 'erfc',\n",
-       " 'exp',\n",
-       " 'exp2',\n",
-       " 'expm1',\n",
-       " 'fabs',\n",
-       " 'factorial',\n",
-       " 'floor',\n",
-       " 'fma',\n",
-       " 'fmod',\n",
-       " 'frexp',\n",
-       " 'fsum',\n",
-       " 'gamma',\n",
-       " 'gcd',\n",
-       " 'hypot',\n",
-       " 'inf',\n",
-       " 'isclose',\n",
-       " 'isfinite',\n",
-       " 'isinf',\n",
-       " 'isnan',\n",
-       " 'isqrt',\n",
-       " 'lcm',\n",
-       " 'ldexp',\n",
-       " 'lgamma',\n",
-       " 'log',\n",
-       " 'log10',\n",
-       " 'log1p',\n",
-       " 'log2',\n",
-       " 'modf',\n",
-       " 'nan',\n",
-       " 'nextafter',\n",
-       " 'perm',\n",
-       " 'pi',\n",
-       " 'pow',\n",
-       " 'prod',\n",
-       " 'radians',\n",
-       " 'remainder',\n",
-       " 'sin',\n",
-       " 'sinh',\n",
-       " 'sqrt',\n",
-       " 'sumprod',\n",
-       " 'tan',\n",
-       " 'tanh',\n",
-       " 'tau',\n",
-       " 'trunc',\n",
-       " 'ulp']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__doc__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'cbrt', 'ceil', 'comb', 'copysign', 'cos', 'cosh', 'degrees', 'dist', 'e', 'erf', 'erfc', 'exp', 'exp2', 'expm1', 'fabs', 'factorial', 'floor', 'fma', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'isqrt', 'lcm', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'nextafter', 'perm', 'pi', 'pow', 'prod', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'sumprod', 'tan', 'tanh', 'tau', 'trunc', 'ulp']\n",
+      "Help on built-in function lcm in module math:\n",
+      "\n",
+      "lcm(*integers)\n",
+      "    Least Common Multiple.\n",
+      "\n",
+      "None\n"
+     ]
     }
    ],
    "source": [
     "import math\n",
-    "dir(math)  # list all functions in math module"
+    "print(dir(math))  # list all functions in math module\n",
+    "print(help(math.lcm))  # get help on math.lcm module.funct"
    ]
   },
   {
