--- a/Syntax/Operation.ipynb
+++ b/Syntax/Operation.ipynb
@@ -23,6 +23,48 @@
     "\n",
     "`object.method(*args*)`\n",
     "\n",
+    "5. Regular express\n",
+    "\n",
+    "`re`\n",
+    "\n",
+    "**Pattern | Meaning**\n",
+    "\n",
+    ". | Any character (except newline)\n",
+    "\n",
+    "\\d | Digit (0–9)\n",
+    "\n",
+    "\\D | Not a digit\n",
+    "\n",
+    "\\w | Word character (letter, digit, _)\n",
+    "\n",
+    "\\W | Not a word character\n",
+    "\n",
+    "\\s | Whitespace\n",
+    "\n",
+    "\\S | Non-whitespace\n",
+    "\n",
+    "^ | Start of string\n",
+    "\n",
+    "$ | End of string\n",
+    "\n",
+    "[...] | Match any one of the characters\n",
+    "\n",
+    "[^...] | Match any character not listed\n",
+    "\n",
+    "* | 0 or more\n",
+    "\n",
+    "+ | 1 or more\n",
+    "\n",
+    "? | 0 or 1 (optional)\n",
+    "\n",
+    "{n} | Exactly n times\n",
+    "\n",
+    "{n,} | At least n times\n",
+    "\n",
+    "(...) | Group for capturing\n",
+    "\n",
+    "\\` | \\`\n",
+    "\n",
     "---"
    ]
   },
@@ -276,6 +318,78 @@
     "    print(u,v)\n",
     "except NameError as e:\n",
     "    print(e) # name 'v' is not defined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### regular express\n",
+    "\n",
+    "**search**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 10), match='2025-04-23'>\n",
+      "Year: 2025\n",
+      "Month: 04\n",
+      "Day: 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "text = \"2025-04-23\"\n",
+    "match = re.search(r\"(\\d{4})-(\\d{2})-(\\d{2})\", text)\n",
+    "print(match)  # match object\n",
+    "if match:\n",
+    "    print(\"Year:\", match.group(1))   # 2025\n",
+    "    print(\"Month:\", match.group(2))  # 04\n",
+    "    print(\"Day:\", match.group(3))    # 23\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**match**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 6), match='abc123'>\n",
+      "abc123 abc12 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "s='abc123'\n",
+    "m=re.match(r'(\\w+)(\\d+)',s)\n",
+    "print(m) # match object\n",
+    "print(m.group(0), m.group(1), m.group(2)) # match groups"
    ]
   }
  ],
