--- a/Syntax/function.ipynb
+++ b/Syntax/function.ipynb
@@ -14,6 +14,16 @@
     "\n",
     "4. Decorator\n",
     "\n",
+    "5. Name space & scope\n",
+    "\n",
+    "**name space:**\n",
+    "\n",
+    "local names -> global names -> built-in names\n",
+    "\n",
+    "**scope:**\n",
+    "\n",
+    "local -> enclosing -> global -> built-in\n",
+    "\n",
     "---"
    ]
   },
@@ -474,6 +484,77 @@
     "def target_function(arg1, arg2):\n",
     "    print(f\"Inside the target function with par {arg1} and {arg2}\")\n",
     "target_function('a', 'b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Name space & scope\n",
+    "\n",
+    "**global**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=1\n",
+    "def fun():\n",
+    "    global num #using global variable\n",
+    "    num+=1\n",
+    "    print(num)\n",
+    "fun() #calling the function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**nonlocal**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=1\n",
+    "def outer():\n",
+    "    num=2\n",
+    "    def inner():\n",
+    "        nonlocal num #using nonlocal variable\n",
+    "        num+=1\n",
+    "        print(num)\n",
+    "    inner()\n",
+    "\n",
+    "outer() #calling the outer function"
    ]
   }
  ],
