--- a/Syntax/input-output.ipynb
+++ b/Syntax/input-output.ipynb
@@ -46,6 +46,8 @@
     "\n",
     "`str.format()` for formatted string\n",
     "\n",
+    "---\n",
+    "\n",
     "3. Storage\n",
     "\n",
     "**pickle**:\n",
@@ -56,6 +58,8 @@
     "\n",
     "Human-readable, supports: `dict`, `list`, `str`, `int`, `float`, `bool`, and `None`\n",
     "\n",
+    "---\n",
+    "\n",
     "4. OS\n",
     "\n",
     "**file and directory management**\n",
@@ -64,7 +68,21 @@
     "\n",
     "**environment Variables**\n",
     "\n",
-    "**run a system command**\n",
+    "---\n",
+    "\n",
+    "5. shutil\n",
+    "\n",
+    "**file and directory management**\n",
+    "\n",
+    "6. glob\n",
+    "\n",
+    "**file wildcard**\n",
+    "\n",
+    "7. sys\n",
+    "\n",
+    "**system path & argument**\n",
+    "\n",
+    "**standard input & output & error**\n",
     "\n",
     "---"
    ]
@@ -758,6 +776,178 @@
     "\n",
     "for key,value in os.environ.items():  # iterate through environment variables\n",
     "    print(key, value)  # print key and value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### shutil\n",
+    "\n",
+    "**file and directory management**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Taylor\\\\OneDrive\\\\桌面\\\\程序\\\\Python\\\\Notes\\\\test.md'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import shutil           \n",
+    "shutil.copy(r\"C:\\Users\\Taylor\\OneDrive\\桌面\\程序\\Python\\Notes\\Syntax\\test.md\", r\"C:\\Users\\Taylor\\OneDrive\\桌面\\程序\\Python\\Notes\\Git\")  # copy file\n",
+    "shutil.move(r\"C:\\Users\\Taylor\\OneDrive\\桌面\\程序\\Python\\Notes\\Git\\test.md\", r\"C:\\Users\\Taylor\\OneDrive\\桌面\\程序\\Python\\Notes\")  # move file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### glob\n",
+    "\n",
+    "**file wildcard**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\Taylor\\\\OneDrive\\\\桌面\\\\程序\\\\Python\\\\Notes\\\\README.md',\n",
+       " 'C:\\\\Users\\\\Taylor\\\\OneDrive\\\\桌面\\\\程序\\\\Python\\\\Notes\\\\test.md']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "glob.glob(r\"C:\\Users\\Taylor\\OneDrive\\桌面\\程序\\Python\\Notes\\*.md\")  # get all files with .md extension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### sys\n",
+    "\n",
+    "**system path & argument**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d:\\\\Program Files\\\\Python\\\\Python313\\\\python313.zip', 'd:\\\\Program Files\\\\Python\\\\Python313\\\\DLLs', 'd:\\\\Program Files\\\\Python\\\\Python313\\\\Lib', 'd:\\\\Program Files\\\\Python\\\\Python313', '', 'C:\\\\Users\\\\Taylor\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages', 'C:\\\\Users\\\\Taylor\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\win32', 'C:\\\\Users\\\\Taylor\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\Taylor\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\Pythonwin', 'd:\\\\Program Files\\\\Python\\\\Python313\\\\Lib\\\\site-packages']\n",
+      "['C:\\\\Users\\\\Taylor\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\ipykernel_launcher.py', '--f=c:\\\\Users\\\\Taylor\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-v3c1edcd2ff9aad6734b7ab2b81edb824614f642a3.json']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.path)  # print path\n",
+    "print(sys.argv)  # print arguments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**stdin, stdout, stderr**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#package the following codes to the terminal\n",
+    "#run *filename*.py in cmd or powershell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "message=sys.stdin.readline()  # read from standard input\n",
+    "print(message) # print message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.stdout.write(\"Hello world!\\n\")  # write to standard output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "with open(\"output.txt\", \"w\") as f: # open file for writing\n",
+    "    sys.stdout = f # redirect standard output to file\n",
+    "    print(\"This goes into the file!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.stderr.write(\"This is an error message!\\n\") # write to standard error"
    ]
   }
  ],
